# amber

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  amber_run_ux_target.md  clippy.toml  framework-component-design-v3.md  rust-toolchain.toml  task.md
cli/: Cargo.toml  README.md  build.rs
cli/src/: command_support.rs  docs.rs  example_catalog.rs  framework_component.rs  governance_runtime.rs  main.rs  mixed_run.rs  port_reservation.rs  run_inputs.rs  run_logs.rs  scenario_runner.rs  site_proxy_metadata.rs  tcp_readiness.rs  tests.rs  unix_process.rs  vm_runtime.rs
cli/src/direct_runtime/: mod.rs  preview.rs  process.rs  runtime.rs
cli/src/framework_component/: api.rs  ccs_api.rs  control_state_api.rs  control_state_mcp.rs  dynamic_caps.rs  http.rs  mcp.rs  mod.rs  orchestration.rs  planner.rs  state.rs  tests.rs
cli/src/mixed_run/: launch_bundle.rs  outside_proxy.rs  supervisor.rs  tests.rs
cli/src/vm_runtime/: artifacts.rs  preview.rs  state.rs  tests.rs
cli/tests/: AGENTS.md  compile_outputs.rs  direct_smoke.rs  docs.rs  examples.rs  kvm_smoke.rs  linux_vm.rs  mixed_run.rs  run_commands.rs  ui.rs  vm_smoke.rs
cli/tests/compile_outputs/: artifact_outputs.rs  config_each.rs  forwarded_defaults.rs  mod.rs  runtime_conditionals.rs  scenario_ir.rs
cli/tests/mixed_run/: dry_run.rs  lifecycle.rs  mod.rs  smoke.rs  support.rs
cli/tests/test_support/: cloud_image.rs  macos_vm.rs  outputs_root.rs  port_allocator.rs  runtime_bins.rs  target_dir.rs  workspace_root.rs
cli/tests/ui/: binding_extra_field.json5  binding_extra_field.stderr  binding_interpolation_unknown_binding.json5  binding_interpolation_unknown_binding.stderr  binding_interpolation_unknown_binding_child.json5  binding_invalid_to.json5  binding_invalid_to.stderr  binding_missing_from.json5  binding_missing_from.stderr  binding_mixed_dot_form_from.json5  binding_mixed_dot_form_from.stderr  binding_mixed_dot_form_to.json5  binding_mixed_dot_form_to.stderr  binding_name_duplicate.json5  binding_name_duplicate.stderr  binding_name_invalid.json5  binding_name_invalid.stderr  binding_self.json5  binding_self.stderr  binding_unknown_child.json5  binding_unknown_child.stderr  binding_unknown_resource.json5  binding_unknown_resource.stderr  binding_unknown_slot.json5  binding_unknown_slot.stderr  binding_weak_wrong_type.json5  binding_weak_wrong_type.stderr  bindings_wrong_type.json5  bindings_wrong_type.stderr  compile_no_output.json5  compile_no_output.stderr  components_not_object.json5  components_not_object.stderr  config_schema_additional_properties_schema.json5  config_schema_additional_properties_schema.stderr  config_schema_invalid_property_name.json5  config_schema_invalid_property_name.stderr  config_schema_invalid_required_name.json5  config_schema_invalid_required_name.stderr  config_schema_invalid_type_keyword.json5  (+214 more)
compiler/: Cargo.toml  GOVERNANCE.md  OVERLAYS.md  README.md
compiler/config/: Cargo.toml
compiler/config/src/: env.rs  lib.rs  node.rs  profile.rs  schema.rs  template.rs
compiler/json5/: Cargo.toml
compiler/json5/src/: diagnostic.rs  json5.pest  spans.rs
compiler/json5/tests/: diagnostic.rs
compiler/manifest/: Cargo.toml  README.md
compiler/manifest/src/: config_schema_profile.rs  document.rs  error.rs  framework.rs  interpolation.rs  lib.rs  lint.rs  names.rs  refs.rs  schema.rs  slot_query.rs  spans.rs
compiler/manifest/tests/: builder.rs
compiler/resolver/: Cargo.toml  README.md
compiler/resolver/src/: file.rs  http.rs  lib.rs  remote.rs
compiler/scenario/: Cargo.toml  README.md
compiler/scenario/src/: graph.rs  ir.rs  lib.rs  program.rs
compiler/src/: binding_query.rs  binding_usage.rs  binding_validation.rs  bundle.rs  config_resolution.rs  config_scope.rs  config_template.rs  config_templates.rs  environment.rs  frontend.rs  governance.rs  governance_runtime.rs  lib.rs  linker.rs  lint.rs  manifest_table.rs  mesh.rs  mir.rs  overlay.rs  overlay_pass.rs  overlays.rs  policy_pass.rs  program_lowering.rs  program_semantics.rs  provenance.rs  run_plan.rs  runtime_config.rs  runtime_interface.rs  slot_query.rs  slot_validation.rs  storage_plan.rs  store.rs  tests.rs
compiler/src/backend/: dot.rs  mod.rs
compiler/src/bundle/: mod.rs
compiler/src/config/: analysis.rs  mod.rs  query.rs  scope.rs  template.rs  templates.rs  validation.rs
compiler/src/frontend/: mod.rs  store.rs
compiler/src/linker/: bindings.rs  manifest_table.rs  mod.rs  program_lowering.rs  provenance.rs  sites.rs  tests.rs
compiler/src/mesh/: config.rs  mod.rs
compiler/src/mir/: dce_tests.rs  flatten_tests.rs  mod.rs
compiler/src/passes/: dce.rs  flatten.rs  mod.rs
compiler/template/: Cargo.toml
compose-helper/: Cargo.toml
compose-helper/src/: lib.rs  main.rs
compose-helper/tests/: docker_e2e.rs
docker-gateway/: Cargo.toml  README.md
docker-gateway/src/: lib.rs  main.rs
helper/: Cargo.toml
helper/src/: lib.rs  main.rs
helper/tests/: docker_e2e.rs
images/: Cargo.toml  build.rs
images/src/: lib.rs  versioning.rs
manager/: Cargo.toml
manager/migrations/: 0001_init.sql
manager/src/: api.rs  compiler.rs  config.rs  domain.rs  ids.rs  instance_lock.rs  json.rs  lib.rs  main.rs  mcp.rs  runtime.rs  service.rs
manager/tests/: amber_scenario_manager_live.rs
manifest/: AGENTS.md  Cargo.toml  README.md
manifest/src/: config_schema_profile.rs  document.rs  error.rs  framework.rs  interpolation.rs  json5.pest  lib.rs  lint.rs  main.rs  names.rs  refs.rs  schema.rs  spans.rs  tests.rs
manifest/tests/: builder.rs
mesh/: Cargo.toml
mesh/src/: lib.rs
provisioner/: Cargo.toml
provisioner/src/: main.rs
resolver/: Cargo.toml
resolver/src/: cache.rs  file.rs  http.rs  lib.rs  remote.rs
router/: Cargo.toml
router/src/: lib.rs  main.rs
runtime/helper/: Cargo.toml
runtime/mesh/: Cargo.toml
runtime/provisioner/: Cargo.toml
runtime/proxy/: Cargo.toml
runtime/router/: Cargo.toml
runtime/site-controller/: Cargo.toml
scenario/: AGENTS.md  Cargo.toml  README.md
scenario/src/: cache.rs  graph.rs  ir.rs  lib.rs  main.rs
(+347 files in other folders)
