[workspace]
members = [
  "cli",
  "config",
  "compiler",
  "helper",
  "json5",
  "manifest",
  "node",
  "resolver",
  "scenario",
  "template",
]
resolver = "2"

[workspace.dependencies]
amber-compiler = { path = "compiler" }
amber-config = { path = "config" }
amber-json5 = { path = "json5" }
amber-manifest = { path = "manifest" }
amber-resolver = { path = "resolver" }
amber-scenario = { path = "scenario" }
amber-template = { path = "template" }
base64 = "0.22.1"
futures = "0.3.31"
jsonschema = { version = "0.38.1", default-features = false }
miette = "7.4.0"
serde = "1.0.217"
serde_json = "1.0.148"
serde_yaml = "0.9.34"
tempfile = "3.24.0"
thiserror = "2.0.9"
tokio = "1.48.0"
url = "2.5.7"

[profile.release]
lto = "thin"
codegen-units = 1
