[workspace]
members = [
  "cli",
  "compiler",
  "compiler/config",
  "compiler/json5",
  "compiler/manifest",
  "compiler/resolver",
  "compiler/scenario",
  "compiler/template",
  "images",
  "node",
  "runtime/docker-gateway",
  "runtime/helper",
  "runtime/mesh",
  "runtime/provisioner",
  "runtime/router",
]
resolver = "2"

[workspace.dependencies]
amber-compiler = { path = "compiler" }
amber-config = { path = "compiler/config" }
amber-images = { path = "images" }
amber-json5 = { path = "compiler/json5" }
amber-manifest = { path = "compiler/manifest" }
amber-mesh = { path = "runtime/mesh" }
amber-resolver = { path = "compiler/resolver" }
amber-router = { path = "runtime/router" }
amber-scenario = { path = "compiler/scenario" }
amber-template = { path = "compiler/template" }
base64 = "0.22.1"
futures = "0.3.31"
hyper-util = { version = "0.1.10", features = ["client-legacy", "tokio"] }
jsonptr = "0.7.1"
jsonschema = { version = "0.38.1", default-features = false }
miette = "7.4.0"
serde = "1.0.217"
serde_json = "1.0.148"
serde_yaml = "0.9.34"
serde_with = "3.16.1"
tempfile = "3.24.0"
thiserror = "2.0.9"
tokio = "1.48.0"
url = "2.5.7"
reqwest = { version = "0.13.1", default-features = false, features = ["json", "rustls", "stream"] }

[profile.release]
lto = "thin"
codegen-units = 1
