[package]
name = "amber-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "amber"
path = "src/main.rs"

[dependencies]
amber-compiler = { workspace = true }
amber-config = { workspace = true }
amber-manifest = { workspace = true }
amber-mesh = { workspace = true }
amber-resolver = { workspace = true }
amber-router = { workspace = true }
amber-template = { workspace = true }
base64 = { workspace = true }
clap = { version = "4.5.46", features = ["derive"] }
libc = "0.2.177"
miette = { workspace = true, features = ["fancy"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros", "process", "rt-multi-thread", "signal", "time"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

[build-dependencies]
amber-manifest = { workspace = true }

[dev-dependencies]
amber-images = { workspace = true }
serde_yaml = { workspace = true }
similar = "2.7.0"
strip-ansi-escapes = "0.2"
tempfile = { workspace = true }
