[package]
name = "amber-cli"
edition = "2024"

[[bin]]
name = "amber"
path = "src/main.rs"

[dependencies]
amber-compiler = { workspace = true }
amber-config = { workspace = true }
amber-helper = { path = "../runtime/helper" }
amber-manifest = { workspace = true }
amber-mesh = { workspace = true }
amber-proxy = { workspace = true }
amber-resolver = { workspace = true }
amber-router = { workspace = true }
amber-scenario = { workspace = true }
amber-template = { workspace = true }
axum = { version = "0.8.6", features = ["http1", "json", "tokio"] }
base64 = { workspace = true }
clap = { version = "4.5.46", features = ["derive"] }
fatfs = "0.3.6"
jsonschema = { workspace = true, default-features = false }
libc = "0.2.177"
miette = { workspace = true, features = ["fancy"] }
reqwest = { workspace = true }
regex = "1.11.1"
rpassword = "7.4.0"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = "0.10.9"
tempfile = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros", "net", "process", "rt-multi-thread", "signal", "time"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
dotenvy = "0.15.7"

[build-dependencies]
amber-images = { workspace = true }
amber-manifest = { workspace = true }

[dev-dependencies]
amber-images = { workspace = true }
serde_yaml = { workspace = true }
similar = "2.7.0"
strip-ansi-escapes = "0.2"
tempfile = { workspace = true }
