[package]
name = "amber-compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
amber-manifest = { path = "../manifest" }
amber-resolver = { path = "../resolver" }
amber-scenario = { path = "../scenario" }
dashmap = "6.1.0"
futures = "0.3.31"
jsonschema = { version = "0.37.4", default-features = false }
miette = { version = "7.4.0", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.9"
tokio = { version = "1.48.0", features = ["rt", "sync"] }
url = "2.5.7"

[dev-dependencies]
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
