[package]
name = "amber-compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
amber-manifest = { workspace = true }
amber-resolver = { workspace = true }
amber-scenario = { workspace = true }
dashmap = "6.1.0"
futures = { workspace = true }
jsonschema = { workspace = true }
miette = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync"] }
url = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
