[package]
name = "amber-compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
amber-config = { workspace = true }
amber-images = { workspace = true }
amber-manifest = { workspace = true }
amber-mesh = { workspace = true }
amber-resolver = { workspace = true }
amber-scenario = { workspace = true }
amber-template = { workspace = true }
base64 = { workspace = true }
dashmap = "6.1.0"
futures = { workspace = true }
jsonschema = { workspace = true }
miette = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = "0.10.9"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "rt", "sync"] }
url = { workspace = true, features = ["serde"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = { workspace = true }
