[package]
name = "amber-compose-helper"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = { workspace = true }
jsonschema = { workspace = true }
amber-template = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
