[package]
name = "amber-docker-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = { workspace = true }
bytes = "1.10.1"
dashmap = "6.1.0"
http-body-util = "0.1.3"
hyper = { version = "1.7.0", features = ["full"] }
hyper-util = { workspace = true }
hyperlocal = { version = "0.9.1", features = ["client"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "io-util", "sync", "time", "signal"] }
url = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = { workspace = true }
