[package]
name = "amber-manifest"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
json5 = "0.4.1"
jsonschema = { version = "0.37.4", default-features = false }
miette = { version = "7.4.0", features = ["derive"] }
pest = "2.8.4"
pest_derive = "2.8.4"
semver = { version = "1.0.27", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_path_to_error = "0.1.20"
serde_with = "3.16.1"
sha2 = "0.10.9"
shlex = "1.3.0"
thiserror = "2.0.9"
url = { version = "2.5.7", features = ["serde"] }
