[package]
name = "amber-manifest"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
amber-json5 = { path = "../json5" }
jsonschema = { version = "0.38.1", default-features = false }
miette = { version = "7.4.0", features = ["derive"] }
semver = { version = "1.0.27", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.148"
serde_with = "3.16.1"
sha2 = "0.10.9"
shlex = "1.3.0"
thiserror = "2.0.9"
url = { version = "2.5.7", features = ["serde"] }
