[package]
name = "amber-manifest"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = { workspace = true }
amber-config = { workspace = true }
amber-json5 = { workspace = true }
jsonschema = { workspace = true }
miette = { workspace = true, features = ["derive"] }
semver = { version = "1.0.27", features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = "3.16.1"
sha2 = "0.10.9"
shlex = "1.3.0"
thiserror = { workspace = true }
url = { workspace = true, features = ["serde"] }
