[package]
name = "amber-provisioner"
version = "0.1.0"
edition = "2024"

[dependencies]
amber-mesh = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
tempfile = { workspace = true }
