[package]
name = "amber-resolver"
version = "0.1.0"
edition = "2024"

[dependencies]
amber-manifest = { workspace = true }
futures = { workspace = true }
miette = { workspace = true, features = ["derive"] }
reqwest = { version = "0.13.1", default-features = false, features = ["rustls", "stream"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
url = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
