[package]
name = "amber-router"
version = "0.1.0"
edition = "2024"

[dependencies]
amber-mesh = { workspace = true }
base64 = { workspace = true }
bytes = "1.10.0"
curve25519-dalek = "4.1.3"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
http-body-util = "0.1.3"
hyper = { version = "1.5.0", features = ["http1", "server"] }
http = "1.1.0"
hyper-rustls = { version = "0.27.7", default-features = false, features = [
  "aws-lc-rs",
  "http1",
  "http2",
  "tls12",
  "webpki-tokio",
] }
hyper-util = { version = "0.1.10", features = ["client-legacy", "tokio"] }
rustls = { version = "0.23.36", default-features = false, features = ["aws_lc_rs"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = "0.10.9"
snow = "0.9.6"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-util", "net"] }
url = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
