[package]
name = "amber-scenario"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.23", features = ["derive"] }
json5 = "0.4.1"
jsonschema = { version = "0.37.4", default-features = false }
reqwest = { version = "0.12.25", default-features = false, features = ["rustls-tls"], optional = true }
semver = { version = "1.0.27", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_path_to_error = "0.1.20"
serde_with = "3.16.1"
sha2 = "0.10.9"
shlex = "1.3.0"
thiserror = "2.0.9"
tokio = { version = "1.48.0", features = ["fs"], optional = true }
url = { version = "2.5.7", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }

[features]
default = ["resolvers"]
resolvers = ["http-resolver", "file-resolver", "remote-resolver"]
http-resolver = ["reqwest"]
file-resolver = ["tokio"]
remote-resolver = []
