[package]
name = "amber-resolver"
edition = "2024"

[dependencies]
amber-manifest = { workspace = true }
futures = { workspace = true }
miette = { workspace = true, features = ["derive"] }
reqwest = { workspace = true, default-features = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
url = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = { workspace = true }
