[package]
name = "amber-helper"
edition = "2024"

[dependencies]
amber-config = { workspace = true }
amber-mesh = { workspace = true }
base64 = { workspace = true }
jsonschema = { workspace = true }
amber-template = { workspace = true }
libc = "0.2.177"
linux-raw-sys = { version = "0.12.1", features = ["landlock", "ptrace"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
signal-hook = "0.3.18"
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
