[package]
name = "amber-mesh"
edition = "2024"

[dependencies]
base64 = { workspace = true }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = "0.10.9"
thiserror = { workspace = true }
tracing-error = "0.2.1"
tracing-subscriber = { workspace = true, features = ["json"] }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry-appender-tracing = { version = "0.31.1", features = ["experimental_metadata_attributes", "experimental_use_tracing_span_context"] }
