[package]
name = "amber-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
amber-compiler = { workspace = true }
amber-manifest = { workspace = true }
amber-mesh = { workspace = true }
amber-router = { workspace = true }
base64 = { workspace = true }
miette = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros", "net", "signal", "time"] }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
